--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,7 +554,11 @@ footer h5{
 .social li a:hover i{
     transform: scale(1.1);
 }
-
+hr{
+    border-top: 1px solid black;
+    width: 100%;
+    opacity: 0.1;
+}
 /* Need to be removed later */
 /* .notification_parent{
     position: fixed;
