--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -711,6 +711,33 @@ hr{
     opacity: 0.4;
     font-size: 15px;
 }
+.imgBox{
+  width: 300px;
+  height: 300px;
+  position: relative;
+  z-index: 1;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.imgBox::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-green);
+    top: -15px;
+    right: -15px;
+    z-index: -1;
+    border-radius: 50%;
+}
+.imgBox img{
+    width: 100%;
+    height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
 /* Need to be removed later */
 /* .notification_parent{
     position: fixed;
