--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -713,8 +713,8 @@ hr{
     font-size: 15px;
 }
 .imgBox{
-  width: 300px;
-  height: 300px;
+  width: 100px;
+  height: 100px;
   position: relative;
   z-index: 1;
   margin-left: auto;
@@ -728,8 +728,8 @@ hr{
     width: 100%;
     height: 100%;
     background-color: var(--color-green);
-    top: -15px;
-    right: -15px;
+    top: -8px;
+    right: -8px;
     z-index: -1;
     border-radius: 50%;
 }
@@ -763,6 +763,22 @@ address{
 }
 .link_card h6{
     text-align: center;
+}
+.contactLink{
+    font-size: 14px;
+}
+.link_card .contactLink{
+    font-size: 18px !important;
+}
+.map_link{
+    color: var(--black-primary);
+}
+.map_link:hover{
+    color: var(--black-primary);
+}
+.page_link{
+    font-size: 16px;
+    font-weight: normal;
 }
 /* Need to be removed later */
 /* .notification_parent{
